Support friends deletion.

--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -1,10 +1,20 @@
 <h1>Friends Index</h1>
 
-<h2>Total friends: {{length}}</h2>
-<ul>
-  {{#each friend in model}}
-    <li>
-      {{link-to friend.fullName 'friends.show' friend}}
-    </li>
-  {{/each}}
-</ul>
+<h2>Friends: {{length}}</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each}}
+      <tr>
+        <td>{{link-to fullName "friends.show" this}}</td>
+        <td><a href="#" {{action "delete" this}}>delete</a></td>
+      </tr>
+    {{/each}}
+  </tbody>
+</table>
