--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -4,4 +4,5 @@
   <li>Email: {{email}}</li>
   <li>twitter: {{twitter}}</li>
   <li>{{link-to 'Edit info' 'friends.edit' this}}</li>
+  <li><a href="#" {{action "delete" this}}>delete</a></li>
 </ul>
