--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -1,8 +1,8 @@
-<ul>
-  <li>First Name: {{firstName}}</li>
-  <li>Last Name: {{lastName}}</li>
-  <li>Email: {{email}}</li>
-  <li>twitter: {{twitter}}</li>
-  <li>{{link-to 'Edit info' 'friends.edit' this}}</li>
-  <li><a href="#" {{action "delete" this}}>delete</a></li>
-</ul>
+<div class="friend-profile">
+  <p>{{firstName}}</p>
+  <p>{{lastName}}</p>
+  <p>{{email}}</p>
+  <p>{{twitter}}</p>
+  <p>{{link-to 'Edit info' 'friends.edit' this}}</p>
+  <p><a href="#" {{action "delete" this}}>delete</a></p>
+</div>
