Use ember-cli-fill-murray.

--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -1,6 +1,6 @@
 <div class="friend-profile" class="row">
   <div class="friend-info full">
-    <img src="http://www.fillmurray.com/300/300">
+    {{fill-murray width=300 length=300}}
     <div>
       <p>{{fullName}}</p>
       <p>{{email}}</p>
