--- a/app/templates/articles/index.hbs
+++ b/app/templates/articles/index.hbs
@@ -14,7 +14,7 @@
         <td>{{description}}</td>
         <td>{{notes}}</td>
         <td>{{formatted-date createdAt 'LL'}}</td>
-        <td>{{view Ember.Select content=states selection=state}}</td>
+        <td>{{view "select" content=states selection=state}}</td>
         <td>
           {{#if isSaving}}
             <p>Saving ...</p>
