Paving towards Ember 2.0.
* Remove itemController in favor of components app/templates/components/article-row.hbs
* Remove use of Object and Array controller in favor of Ember
  controller see app/controllers/articles/index.js.
* In templates reference `model` explicitly app/friends/index/template.hbs

--- a/app/friends/index/template.hbs
+++ b/app/friends/index/template.hbs
@@ -7,11 +7,11 @@
     </tr>
   </thead>
   <tbody>
-    {{#each}}
+    {{#each friend in model}}
       <tr>
-        <td>{{link-to fullName "articles" this}}</td>
-        <td>{{totalArticles}}</td>
-        <td><a href="#" {{action "delete" this}}>delete</a></td>
+        <td>{{link-to friend.fullName "articles" friend}}</td>
+        <td>{{friend.totalArticles}}</td>
+        <td><a href="#" {{action "delete" friend}}>delete</a></td>
       </tr>
     {{/each}}
   </tbody>
