Use ember to canary and handlebars 2.

--- a/app/templates/articles/index.hbs
+++ b/app/templates/articles/index.hbs
@@ -10,7 +10,7 @@
   </thead>
   <tbody>
     {{#each article in model}}
-      {{article-row article=article save="save"}}
+      {{articles/article-row article=article save="save"}}
     {{/each}}
   </tbody>
 </table>
