--- a/app/friends/-form/template.hbs
+++ b/app/friends/-form/template.hbs
@@ -1,10 +1,10 @@
 <form {{action "save" on="submit"}}>
   <h2>{{errorMessage}}</h2>
   <fieldset>
-    {{input value=model.firstName placeholder='First Name'}}</br>
-    {{input value=model.lastName  placeholder='Last Name'}}</br>
-    {{input value=model.email placeholder='email'}}</br>
-    {{input value=model.twitter placeholder='twitter'}}</br>
+    {{input value=model.firstName placeholder='First Name'}}<br/>
+    {{input value=model.lastName  placeholder='Last Name'}}<br/>
+    {{input value=model.email placeholder='email'}}<br/>
+    {{input value=model.twitter placeholder='twitter'}}<br/>
     <input type="submit" value="Save" class="primary">
     <button {{action "cancel"}}>Cancel</button>
   </fieldset>
