--- a/app/templates/articles/-form.hbs
+++ b/app/templates/articles/-form.hbs
@@ -1,8 +1,8 @@
 <form>
   <h2>{{errorMessage}}</h2>
   <fieldset>
-    {{input value=model.description placeholder='Description'}}</br>
-    {{input value=model.notes  placeholder='Notes'}}</br>
+    {{input value=model.description placeholder='Description'}}<br/>
+    {{input value=model.notes  placeholder='Notes'}}<br/>
     <button {{action "save"}} class="primary">Save</button>
     <button {{action "cancel"}}>Cancel</button>
   </fieldset>
