--- a/app/friends/index/template.hbs
+++ b/app/friends/index/template.hbs
@@ -1,15 +1,15 @@
-<table class="primary">
+<table class="primary friends-table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Articles</th>
+      <th {{action "setSortBy" "firstName"}}> Name</th>
+      <th {{action "setSortBy" "totalArticles"}}>Articles</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
     {{#each friend in model}}
-      <tr>
-        <td>{{link-to friend.fullName "articles" friend}}</td>
+      <tr class="friend-row">
+        <td>{{link-to friend.fullName "articles" friend.id}}</td>
         <td>{{friend.totalArticles}}</td>
         <td><a href="#" {{action "delete" friend}}>delete</a></td>
       </tr>
