--- a/app/templates/articles/index.hbs
+++ b/app/templates/articles/index.hbs
@@ -9,8 +9,8 @@
     </tr>
   </thead>
   <tbody>
-    {{#each article in model}}
-      {{articles/article-row article=article save="save"}}
+    {{#each model as |article|}}
+      {{articles/article-row articleStates=possibleStates article=article save="save"}}
     {{/each}}
   </tbody>
 </table>
