Section: Hands-on, add friend form.

--- a/app/templates/friends/-form.hbs
+++ b/app/templates/friends/-form.hbs
@@ -1,4 +1,5 @@
 <form {{action "save" on="submit"}}>
+  <h2>{{errorMessage}}</h2>
   <p>
     <label>First Name:
       {{input value=model.firstName}}
@@ -19,6 +20,11 @@
       {{input value=model.twitter}}
     </label>
   </p>
+  <div>
+    <h2>Friend details</h2>
+    <p>{{model.firstName}}</p>
+    <p>{{model.lastName}}</p>
+  </div>
   <input type="submit" value="Save"/>
   <button {{action "cancel"}}>Cancel</button>
 </form>
