Section: Hands-on, Visiting friends.

--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -4,6 +4,8 @@
 
 <ul>
   {{#each model as |friend|}}
-    <li>{{friend.id}} - {{friend.firstName}} {{friend.lastName}}</li>
+    <li>
+      {{link-to friend.fullName 'friends.show' friend}}
+    </li>
   {{/each}}
 </ul>
