--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -4,4 +4,5 @@
   <li>Email: {{model.email}}</li>
   <li>twitter: {{model.twitter}}</li>
   <li>{{link-to "Edit info" "friends.edit" model}}</li>
+  <li><a href="#" {{action "delete" model}}>Delete</a></li>
 </ul>
