Section: Hands-on, use picnic.

--- a/app/templates/friends/-form.hbs
+++ b/app/templates/friends/-form.hbs
@@ -1,25 +1,11 @@
 <form {{action "save" on="submit"}}>
   <h2>{{errorMessage}}</h2>
-  <p>
-    <label>First Name:
-      {{input value=model.firstName}}
-    </label>
-  </p>
-  <p>
-    <label>Last Name:
-      {{input value=model.lastName }}
-    </label>
-  </p>
-  <p>
-    <label>Email:
-      {{input value=model.email}}
-    </label>
-  </p>
-  <p>
-    <label>Twitter
-      {{input value=model.twitter}}
-    </label>
-  </p>
-  <input type="submit" value="Save"/>
-  <button {{action "cancel"}}>Cancel</button>
+  <fieldset>
+    {{input value=model.firstName placeholder="First Name"}}<br>
+    {{input value=model.lastName  placeholder="Last Name"}}<br>
+    {{input value=model.email     placeholder="email"}}<br>
+    {{input value=model.twitter   placeholder="twitter"}}<br>
+    <input type="submit" value="Save" class="primary">
+    <button {{action "cancel"}}>Cancel</button>
+  </fieldset>
 </form>
