--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -1,11 +1,8 @@
-<h1>Friends Index</h1>
-
-<h2>Friends: {{model.length}}</h2>
-
-<table>
+<table class="primary">
   <thead>
     <tr>
       <th>Name</th>
+      <th>Articles</th>
       <th></th>
     </tr>
   </thead>
@@ -13,7 +10,8 @@
     {{#each model as |friend|}}
       <tr>
         <td>{{link-to friend.fullName "friends.show" friend}}</td>
-        <td><a href="#" {{action "delete" friend}}>Delete</a></td>
+        <td>{{friend.totalArticles}}</td>
+        <td><a href="#" {{action "delete" friend}}>delete</a></td>
       </tr>
     {{/each}}
   </tbody>
