--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<h2 id="title">Welcome to Ember.js</h2>
+{{partial "partials/header"}}
 
-{{outlet}}
+<main clas="main">
+  <div class="row">
+    {{outlet}}
+  </div>
+</main>
