--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -1,8 +1,8 @@
-<ul>
-  <li>First Name: {{model.firstName}}</li>
-  <li>Last Name: {{model.lastName}}</li>
-  <li>Email: {{model.email}}</li>
-  <li>twitter: {{model.twitter}}</li>
-  <li>{{link-to "Edit info" "friends.edit" model}}</li>
-  <li><a href="#" {{action "delete" model}}>Delete</a></li>
-</ul>
+<div class="friend-profile">
+  <p>{{model.firstName}}</p>
+  <p>{{model.lastName}}</p>
+  <p>{{model.email}}</p>
+  <p>{{model.twitter}}</p>
+  <p>{{link-to "Edit info" "friends.edit" model}}</p>
+  <p><a href="#" {{action "delete" model}}>delete</a></p>
+</div>
