--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,3 +10,18 @@ body {
 table {
   width: 100%;
 }
+
+.friend-profile{
+  text-align: left;
+}
+
+.friend-profile img {
+  float:left;
+  margin:1em 2em 1em 1em;
+}
+
+.friend-profile-links li {
+  display: inline;
+  list-style-type: none;
+  padding-right: 20px;
+}
