Section: Query Params.

--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -1,8 +1,8 @@
-<table class="primary">
+<table class="friends-table primary">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Articles</th>
+      <th {{action "setSortBy" "firstName"}}> Name</th>
+      <th {{action "setSortBy" "totalArticles"}}>Articles</th>
       <th></th>
     </tr>
   </thead>
